--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cycler==0.10.0
 decorator==4.4.0
 defusedxml==0.6.0
 entrypoints==0.3
+httplib2==0.13.1
 imageio==2.5.0
 imutils==0.5.3
 ipykernel==5.1.2
