--- a/requirements.txt
+++ b/requirements.txt
@@ -1,110 +1,5 @@
-appnope==0.1.0
-atomicwrites==1.3.0
-attrs==19.1.0
-backcall==0.1.0
-bleach>=3.1.1
-blis==0.2.4
-boto==2.49.0
-boto3==1.9.237
-botocore==1.12.237
-cachetools==3.1.1
-certifi==2019.9.11
-chardet==3.0.4
-cycler==0.10.0
-cymem==2.0.2
-cytoolz==0.10.0
-decorator==4.4.0
-defusedxml==0.6.0
-docutils==0.15.2
-entrypoints==0.3
-funcy==1.13
-future==0.17.1
-gensim==3.8.1
-httplib2==0.13.1
-idna==2.8
-imageio==2.5.0
-importlib-metadata==0.23
-imutils==0.5.3
-ipykernel==5.1.2
-ipython==7.7.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-jedi==0.15.1
-jellyfish==0.7.2
-Jinja2==2.10.1
-jmespath==0.9.4
-joblib==0.13.2
-json5==0.8.5
-jsonschema==3.0.2
-jupyter==1.0.0
-jupyter-client==5.3.1
-jupyter-console==6.0.0
-jupyter-core==4.5.0
-jupyterlab==1.1.1
-jupyterlab-server==1.0.6
-kiwisolver==1.1.0
-MarkupSafe==1.1.1
-matplotlib==3.0.3
-mistune==0.8.4
-more-itertools==7.2.0
-murmurhash==1.0.2
-nbconvert==5.6.0
-nbformat==4.4.0
-networkx==2.3
-notebook==6.0.1
-numexpr==2.7.0
-numpy==1.17.1
-opencv-contrib-python==3.3.1.11
-packaging==19.2
-pafy==0.5.4
-pandas==0.24.2
-pandocfilters==1.4.2
-parso==0.5.1
-pexpect==4.7.0
-pickleshare==0.7.5
-pillow>=6.2.0
-plac==0.9.6
-pluggy==0.13.0
-preshed==2.0.1
-prometheus-client==0.7.1
-prompt-toolkit==2.0.9
-ptyprocess==0.6.0
-py==1.8.0
-pyemd==0.5.1
-Pygments==2.4.2
-pyLDAvis==2.1.2
-pyparsing==2.4.2
-Pyphen==0.9.5
-pyrsistent==0.15.4
-pytest==5.1.3
-python-dateutil==2.8.0
-pytz==2019.2
-PyWavelets==1.0.3
-PyYAML==5.1.2
-pyzmq==18.1.0
-qtconsole==4.5.4
-requests==2.22.0
-s3transfer==0.2.1
-scikit-image==0.15.0
-scikit-learn==0.21.3
-scipy==1.3.1
-Send2Trash==1.5.0
-six==1.12.0
-smart-open==1.8.4
-spacy==2.1.8
-srsly==0.1.0
-terminado==0.8.2
-testpath==0.4.2
-textacy==0.9.1
-thinc==7.0.8
-toolz==0.10.0
-tornado==6.0.3
-tqdm==4.36.1
-traitlets==4.3.2
-urllib3==1.25.6
-wasabi==0.2.2
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-youtube-dl==2019.8.13
-zipp==0.6.0
+numpy
+pafy
+pyyaml
+httplib2
+youtube-dl
